# stm32f411-quickstart

./: Cargo.toml  Embed.toml  README.md  openocd.gdb
.cargo/: config.toml
src/: main.rs  main.rs.embassy
