[package]
authors = ["{{authors}}"]
edition = "2021"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.7"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# For non-Embassy build
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f411"] }

# For Embassy build
# embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
# embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
# embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
# embassy-sync = { version = "0.5.0", features = ["defmt"] }
# [patch.crates-io]
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
